add support to cuda and mps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       dockerfile: Dockerfile
     environment:
         SENTENCE_TRANSFORMERS_HOME: /sentence_transformers
+        DEVICE: 'auto'
     volumes:
       - sentence-transformers-home:/sentence_transformers
     ports:
