--- a/encoder_worker/Dockerfile_cuda
+++ b/encoder_worker/Dockerfile_cuda
@@ -2,13 +2,16 @@ FROM nvidia/cuda:12.2.2-base-ubuntu22.04
 COPY . /app
 WORKDIR /app
 
-RUN apt update && sudo apt upgrade
+RUN apt update && apt upgrade -y
+RUN apt-get install -y curl
 
+ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get install -y software-properties-common
 RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt install python3.11
+RUN apt-get install -y python3.11
+RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11
 
-
-RUN pip install --upgrade pip
+RUN pip install --upgrade pip 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python", "app.py"]
+ENTRYPOINT ["python3.11", "app.py"]
