--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 version: '3.8'
+
+x-worker: &worker
+  build:
+    context: encoder_worker
+    dockerfile: Dockerfile
+  environment:
+    SENTENCE_TRANSFORMERS_HOME: /sentence_transformers
+  volumes:
+    - sentence-transformers-home:/sentence_transformers
+  ports:
+    - 5001:5001
+  depends_on:
+    - redis
+
 services:
   redis:
     image: redis:7.2.2-alpine3.18
@@ -18,19 +32,19 @@ services:
       QDRANT__STORAGE__ON_DISK_PAYLOAD: true
     volumes:
       - qdrant-data:/var/lib/qdrant/data
-  worker:
-    build:
-      context: encoder_worker
-      dockerfile: Dockerfile
-    environment:
-        SENTENCE_TRANSFORMERS_HOME: /sentence_transformers
-        DEVICE: 'auto'
-    volumes:
-      - sentence-transformers-home:/sentence_transformers
-    ports:
-      - 5001:5001
-    depends_on:
-      - redis
+  worker-cpu:
+    profiles: ["cpu"]
+    <<: *worker
+  worker-gpu:
+    profiles: ["gpu"]
+    <<: *worker
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: [ gpu ]
+              device_ids: [ '0' ]
 volumes:
   qdrant-data:
   redis-data:
